--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,12 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "javiereguiluz/easyadmin-bundle": "^1.17",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^3",
+        "symfony/maker-bundle": "^1.0",
         "symfony/web-server-bundle": "^3.4",
         "symfony/yaml": "^3.4"
     },
