--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.0.8",
         "ext-iconv": "*",
         "javiereguiluz/easyadmin-bundle": "^1.17",
+        "roave/security-advisories": "dev-master",
         "symfony/console": "^3.4",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^3.4",
